welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:8: error: Unmatched closing brace '}' ignored here
 }
 ^